--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@types/async": "^2.0.45",
     "async": "^2.6.0",
     "rimraf": "^2.6.2",
-    "ts-framework": "git+http://github.com/devnup/ts-framework.git#master",
+    "ts-framework": "nxtep-io/ts-framework#v2.1",
+    "ts-framework-common": "nxtep-io/ts-framework-common#2.0.1",
     "typescript": "^2.5.3"
   },
   "devDependencies": {
