--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "removeComments": false,
     "declarationDir": "dist/types",
     "lib": [
-      "es6",
+      "esnext",
       "dom"
     ]
   },
